# divvy-receipt-automation

./: .gitignore  README.md  divvy_receipt_automation.py  pyproject.toml
