[tool.poetry]
name = "divvy-receipt-automation"
version = "0"
description = "Augment Divvy's native receipt automation"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.7.1"
flake8-import-order = "^0.18.1"
flake8-json = "^21.7.0"
mypy = "^0.961"
pylint = "^2.14.4"
types-requests = "^2.28.0"
types-beautifulsoup4 = "^4.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.pylint.basic]
disable = ["line-too-long,logging-fstring-interpolation,unused-variable,wrong-import-order"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120
good-names = "e"

[tool.pylint.variables]
allow-global-unused-variables = false
